--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "amplify-modelgen": "node amplify/scripts/amplify-modelgen.js",
-    "amplify-push": "node amplify/scripts/amplify-push.js"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
